# ResearchGPT

./: .gitignore  README.md  create_index.py  cs189_output.txt  download.py  gpt4_query.py  main.py  playground.py  pyproject.toml  query_engine.py
client/: package-lock.json  package.json
client/src/: App.js
