[tool.poetry]
name = "research-gpt"
version = "0.1.0"
description = "AI hackathon Jun 2023"
authors = ["Felix Zhu <felixzhu@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.5"
llama-index = "^0.6.27"
fastapi = "^0.97.0"
bs4 = "^0.0.1"
transformers = "^4.30.2"
pypdf = "^3.9.1"
torch = "^2.0.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
